# kleaner

./: .gitignore  CMakeLists.txt  com.github.najepaliya.kleaner.appdata.xml  com.github.najepaliya.kleaner.desktop  com.github.najepaliya.kleaner.json  com.github.najepaliya.kmetadataeditor.json  io.github.najepaliya.kleaner.appdata.xml  io.github.najepaliya.kleaner.desktop  io.github.najepaliya.kleaner.json  readme.md
backend/: backend.cpp  backend.hpp  file_model.cpp  file_model.hpp  main.cpp
data/: io.github.najepaliya.kleaner.desktop  io.github.najepaliya.kleaner.metainfo.xml
frontend/: AbstractView.qml  ButtonRow.qml  FileView.qml  HomePage.qml  Main.qml  TemplateView.qml  TemplateViewFunctions.js
frontend/components/: AbstractView.qml
frontend/components/home/: FileView.qml  TemplateView.qml
frontend/file_view/: FileView.qml
frontend/home/: AbstractView.qml  FileView.qml  FileViewFunctions.js  FileViewUtilities.js  HomePage.qml  TemplateView.qml  TemplateViewUtilities.js
frontend/pages/: Home.qml
license/: FSFAP.txt
main/: Main.qml  main.cpp
source/: CMakeLists.txt  app.cpp  app.h  kleanerconfig.kcfg  kleanerconfig.kcfgc  main.cpp
source/contents/ui/: About.qml  Main.qml
src/: CMakeLists.txt  FileModel.cpp  FileModel.hpp  Kleaner.cpp  Kleaner.hpp  file_model.cpp  file_model.hpp  kleaner.cpp  kleaner.hpp  main.cpp  resources.qrc
src/contents/ui/: FilePage.qml  FilesPage.qml  HomePage.qml  InitialPage.qml  StagingPage.qml  TemplatePage.qml  main.qml
